Closed Bug 937601 Opened 11 years ago Closed 10 years ago

HTTP cache v2: onCacheEntryCheck not called for R/O callbacks

Categories

(Core :: Networking: Cache, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla29

People

(Reporter: mayhemer, Assigned: mayhemer)

References

Details

Attachments

(1 file)

Attached patch v1Splinter Review
I realized that when a consumers wants to open an entry only as read-only we prevent calling onCacheEntryCheck for it.  However onCheck call for existing entries is vital.

There is also a missing test.  This is however not causing any issues..

I'll ask for r after this patch gets better tested.
Comment on attachment 830796 [details] [diff] [review]
v1

On gum for a long time, no problems found.
Attachment #830796 - Flags: review?(michal.novotny)
Attachment #830796 - Flags: review?(michal.novotny) → review+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
Assignee: nobody → honzab.moz
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: