Bug 937601 - HTTP cache v2: onCacheEntryCheck not called for R/O callbacks, r=michal